--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<link rel="stylesheet" href="styles/style.css">
-	<script src="scripts/jquery.js"></script>
-	<script src="scripts/support.js"></script>
-	<script src="scripts/animation.js"></script>
-	<script src="scripts/main.js"></script>
 	<title>2048</title>
 </head>
 <body>
 	<header>
 		<h1>2048</h1>
-		<a href="javascript:;" id="newgame">新游戏</a>
+		<button id="newgame">新游戏</button>
 		<p>分数: <span id="score">0</span></p>
 	</header>
 	<div id="grid-container">
@@ -35,5 +31,9 @@
 		<div class="grid-cell" id="grid-cell-3-2"></div>
 		<div class="grid-cell" id="grid-cell-3-3"></div>
 	</div>
+	<script src="scripts/jquery.js"></script>
+	<script src="scripts/support.js"></script>
+	<script src="scripts/animation.js"></script>
+	<script src="scripts/main.js"></script>
 </body>
 </html>
