--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<header>
 		<h1>2048</h1>
-		<button id="newgame">新游戏</button>
+		<button id="newGame">新游戏</button>
 		<p>分数: <span id="score">0</span></p>
 	</header>
 	<div id="grid-container">
@@ -32,8 +32,6 @@
 		<div class="grid-cell" id="grid-cell-3-3"></div>
 	</div>
 	<script src="scripts/jquery.js"></script>
-	<script src="scripts/support.js"></script>
-	<script src="scripts/animation.js"></script>
-	<script src="scripts/main.js"></script>
+	<script src="scripts/2048.js"></script>
 </body>
 </html>
