--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 	<link rel="stylesheet" href="styles/style.css">
+	<link rel="shorcut icon" href="favicon.ico">
 	<title>2048</title>
 </head>
 <body>
